--- a/_includes/collection.njk
+++ b/_includes/collection.njk
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/_includes/bundle.css">
+    <link rel="stylesheet" href="/_includes/collection.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
